--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ encoding: utf-8
 
 # Setup
 title:               My Website
-#tagline:             'foo's website
-description:         Foo's blog...
+#tagline:             'Malcolm's website
+description:         Malcolm's blog...
 url: https://lanyon-plus.sbamin.com
 baseurl: ""
 urlimg: https://lanyon-plus.sbamin.com/images/
@@ -49,31 +49,31 @@ exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "l
 
 # About/contact
 author:
-  name:              Foo Boo
-  url:               https://twitter.com/abcd
-  avatar:         foo.png
+  name:              Malcolm Mulong
+  url:               https://twitter.com/randomthought_5
+  avatar:            luffy.png
   #email:           
 
 # Owner/author information
 owner:
-  name:           Foo Boo
-  avatar:         foo.png
+  name:           Malcolm Mulong
+  avatar:         luffy.png
   #email:          
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        abcd
+  twitter:        randomthought_5
   facebook:       
-  github:         xyz123abc
+  github:         randomthought
   stackexchange:  
-  linkedin:       https://www.linkedin.com/in/foo
+  linkedin:       https://www.linkedin.com/in/malcolm-mulong-19819367
   instagram:      
   flickr:
   tumblr:  
-  google_plus:    https://plus.google.com/+foo
+  # google_plus:    https://plus.google.com/+foo
   # orcid and google scholar IDs are different than standard username.
-  orcid: xyz123abc
-  gscholar: xyz123abc
+  # orcid: xyz123abc
+  # gscholar: xyz123abc
 
 ## sidebar links:
 # For external links add external: true
@@ -88,9 +88,6 @@ links:
     url: /tags/
   - title: <i class="fa fa-archive"></i> Archive
     url: /archive/
-  - title: <i class="iconside iconm-wordpress"></i> Old Blog
-    url: https://foo.wordpress.com
-    external: true
   - title: <i class="iconside iconm-envelop"></i> Contact
     url: /contact/
   - title: <i class="iconside iconm-twitter"></i> Twitter
@@ -107,12 +104,12 @@ links:
 #twitter_widget_id: xyz123abc
 
 # Add disqus username for Disqus comment board:
-disqus_shortname: foo
+disqus_shortname: malcolm_md
 
 # Analytics and webmaster tools stuff goes here
 #google_analytics:   xyz123abc
 
 #### For dummy website only - remove if you wish ####
-github_repo: https://github.com/dyndna/lanyon-plus
-version: 1.1.1
+# github_repo: https://github.com/dyndna/lanyon-plus
+# version: 1.1.1
 ## END ##
