--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,7 +1,7 @@
 - name: Twitter
-  url: https://twitter.com/abcd
+  url: https://twitter.com/randomthought_5
   class: fa fa-twitter-square
-  title: "Follow me @foo"
+  title: "Follow me @randomthought_5"
 
 - name: Google Plus
   url: https://plus.google.com/+foo
@@ -9,7 +9,7 @@
   title: "Follow me +foo"
 
 - name: GitHub
-  url: https://github.com/xyz123abc
+  url: https://github.com/randomthought
   class: fa fa-github-square
   title: Code repository
 
