--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ description:         Malcolm's blog...
 # baseurl: ""
 # urlimg: https://lanyon-plus.sbamin.com/images/
 ## If you do not have custom domain, comment top three lines, uncomment three lines below and replace dyndna with your github userid and lanyon-plus with your project name. Also, rename CNAME file to CNAME.sample
-url: https://randomthought.github.io/lanyon-plus
+url: https://randomthought.github.io
 baseurl: "/lanyon-plus"
-urlimg: https://randomthought.github.io/lanyon-plus/images/
+urlimg: https://randomthought.github.io/images/
 markdown: kramdown
 kramdown:
   math_engine: mathjax
