fixed image link, and wrote first landing page message.

--- a/_config.yml
+++ b/_config.yml
@@ -65,11 +65,11 @@ owner:
   twitter:        randomthought_5
   facebook:       
   github:         randomthought
-  stackexchange:  
+  stackexchange:  https://stackexchange.com/users/6124493/randomthought
   linkedin:       https://www.linkedin.com/in/malcolm-mulong-19819367
-  instagram:      
-  flickr:
-  tumblr:  
+  # instagram:      
+  # flickr:
+  # tumblr:  
   # google_plus:    https://plus.google.com/+foo
   # orcid and google scholar IDs are different than standard username.
   # orcid: xyz123abc
