--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description:         Malcolm's blog...
 # urlimg: https://lanyon-plus.sbamin.com/images/
 ## If you do not have custom domain, comment top three lines, uncomment three lines below and replace dyndna with your github userid and lanyon-plus with your project name. Also, rename CNAME file to CNAME.sample
 url: https://randomthought.github.io
-baseurl: "/randomthought.github.io"
+baseurl: ""
 urlimg: https://randomthought.github.io/images/
 markdown: kramdown
 kramdown:
