modified temporary intro, deleted example content pages and renamed blog title.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ relative_permalinks: false
 encoding: utf-8
 
 # Setup
-title:               Malcolm Mulong
+title:               randomthought
 #tagline:             'foo's website
 description:         Malcolm's blog...
 # url: https://lanyon-plus.sbamin.com
