Added shortname I got from disqus.com.

--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ links:
 #twitter_widget_id: xyz123abc
 
 # Add disqus username for Disqus comment board:
-disqus_shortname: malcolm_md
+disqus_shortname: personal-blog-18
 
 # Analytics and webmaster tools stuff goes here
 #google_analytics:   xyz123abc
