--- a/_devconfig.yml
+++ b/_devconfig.yml
@@ -7,11 +7,15 @@ relative_permalinks: false
 encoding: utf-8
 
 # Setup
-title:               My Website
+title:               randomthought
 #tagline:             'foo's website
-description:         Foo's blog...
-url:                 http://localhost:4000
-baseurl:  ""
+description:         Malcolm's blog...
+# url: https://lanyon-plus.sbamin.com
+# baseurl: ""
+# urlimg: https://lanyon-plus.sbamin.com/images/
+## If you do not have custom domain, comment top three lines, uncomment three lines below and replace dyndna with your github userid and lanyon-plus with your project name. Also, rename CNAME file to CNAME.sample
+url: http://localhost:4000
+baseurl: ""
 urlimg: http://localhost:4000/images/
 markdown: kramdown
 kramdown:
@@ -45,31 +49,31 @@ exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "l
 
 # About/contact
 author:
-  name:              Foo Boo
-  url:               https://twitter.com/abcd
-  avatar:         foo.png
+  name:              Malcolm Mulong
+  url:               https://twitter.com/randomthought_5
+  avatar:            avatar.png
   #email:           
 
 # Owner/author information
 owner:
-  name:           Foo Boo
-  avatar:         foo.png
+  name:           Malcolm Mulong
+  avatar:         avatar.png
   #email:          
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        abcd
+  twitter:        randomthought_5
   facebook:       
-  github:         xyz123abc
-  stackexchange:  
-  linkedin:       https://www.linkedin.com/in/foo
-  instagram:      
-  flickr:
-  tumblr:  
-  google_plus:    https://plus.google.com/+foo
+  github:         randomthought
+  stackexchange:  https://stackexchange.com/users/6124493/randomthought
+  linkedin:       https://www.linkedin.com/in/malcolm-mulong-19819367
+  # instagram:      
+  # flickr:
+  # tumblr:  
+  # google_plus:    https://plus.google.com/+foo
   # orcid and google scholar IDs are different than standard username.
-  orcid: xyz123abc
-  gscholar: xyz123abc
+  # orcid: xyz123abc
+  # gscholar: xyz123abc
 
 ## sidebar links:
 # For external links add external: true
@@ -84,9 +88,6 @@ links:
     url: /tags/
   - title: <i class="fa fa-archive"></i> Archive
     url: /archive/
-  - title: <i class="iconside iconm-wordpress"></i> Old Blog
-    url: https://foo.wordpress.com
-    external: true
   - title: <i class="iconside iconm-envelop"></i> Contact
     url: /contact/
   - title: <i class="iconside iconm-twitter"></i> Twitter
@@ -103,12 +104,12 @@ links:
 #twitter_widget_id: xyz123abc
 
 # Add disqus username for Disqus comment board:
-disqus_shortname: foo
+disqus_shortname: personal-blog-18
 
 # Analytics and webmaster tools stuff goes here
 #google_analytics:   xyz123abc
 
 #### For dummy website only - remove if you wish ####
-github_repo: https://github.com/dyndna/lanyon-plus
-version: 1.1.1
+# github_repo: https://github.com/dyndna/lanyon-plus
+# version: 1.1.1
 ## END ##
